# anki-card-maker-companion

./: .gitignore  README.md  image_search.ipynb  main.py  pyproject.toml
helpers/: anki_exporter.py  clue_creator.py  context_creator.py  image_searcher.py
