[project]
name = "anki-card-maker-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "genanki>=0.13.1",
    "ipykernel>=6.29.5",
    "pydantic-ai>=0.2.14",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]
